<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Home Automation</string>

    <!--Actions-->
    <string name="action_settings">Settings</string>
    <string name="action_close">Close</string>

    <!--Preference categories-->
    <string name="security_category_title">Application security</string>
    <string name="networking_category_title">Network and credentials</string>
    <string name="gps_category_title">GPS settings</string>

    <!--Preferences-->
    <string name="globalServerIP_title">Home Automation global IP/URL</string>
    <string name="globalServerIP_summary">Global IP/URL address in internet (eg. myserver.no-ip.org)</string>

    <string name="receivedGlobalServerIP_title">The IP address received by GCM service.</string>
    <string name="receivedGlobalServerIP_summary">Automaticaly received IP from GCM along with message.</string>

    <string name="publicSSLport_title">The publicly exposed SSL port received by GCM service.</string>
    <string name="publicSSLport_summary">Automaticaly received SSL port from GCM along with message.</string>

    <string name="localNetworkServerIP_title">Home Automation Local Server IP</string>
    <string name="localNetworkServerIP_summary">Local IP address in home WiFi network</string>

    <string name="username_title">Username</string>
    <string name="username_summary">Home Automation username</string>

    <string name="password_title">Password</string>
    <string name="password_summary">Home Automation user password</string>

    <string name="protectedByPIN_title">Protection by PIN</string>
    <string name="protectedByPIN_summary">Enable or disable</string>

    <string name="applicationPIN_title">PIN</string>
    <string name="applicationPIN_summary">Enter the application PIN</string>

    <string name="wifissid_title">WiFi SSID</string>
    <string name="wifissid_summary">Your home WiFi name</string>

    <string name="homelatitude_title">Latitude</string>
    <string name="homelatitude_summary">Your home GPS latitude in XY.ZZZZZZ format</string>

    <string name="homelongitude_title">Longitude</string>
    <string name="homelongitude_summary">Your home GPS longitude in XY.ZZZZZZ format</string>
    <string name="device_information_category_title">Device information</string>
    <string name="deviceID">Device ID</string>
    <string name="roomname_upperlobby">H.Chodba</string>
    <string name="roomname_upperlobby_short">H.Chod.</string>
    <string name="roomname_bedroom">Spálňa</string>
    <string name="roomname_outside">Vonku</string>
    <string name="roomname_workroom">Pracovňa</string>
    <string name="roomname_workroom_short">Prac.</string>
    <string name="roomname_entrancelobby">Vchod</string>
    <string name="roomname_kitchen">Kuchyňa</string>
    <string name="roomname_kitchen_short">Kuch.</string>
    <string name="unknown_temperature">--.-- \u00b0C</string>

    <string name="temperatures">Temperatures</string>
    <string name="thermostat">Thermostat</string>
    <string name="thermostat_1">Ground floor</string>
    <string name="thermostat_2">1st floor</string>

    <string name="hot_water">Hot Water</string>
    <string name="hot_water_switch">Switch</string>
    <string name="hot_water_supply">Supply</string>

    <string name="heating_supply">Heating supply</string>
    <string name="remaining_time_for_last_server_command">Remaining time for last \n server command</string>

    <string name="arduino_uptime">Arduino Uptime</string>
    <string name="arduino2_uptime">Arduino 2 Uptime</string>

    <string name="last_communication_from_arduino">Last communication from \n Arduino </string>

    <string name="save">Save</string>
    <string name="unknown_value">UNKNOWN</string>

    <!--TAB NAMES-->
    <string name="tabname_status">Status</string>
    <string name="tabname_heating">Heating</string>
    <string name="tabname_hotwater">Hot Water</string>
    <string name="reset">Reset</string>

    <string name="setup_hot_water">Setup hot water</string>
    <string name="loading">Loading\u8230</string>
    <string name="loadingLongText">Loading application, please wait\u8230</string>
    <string name="roomname_entrancehall">Vchod</string>
    <string name="roomname_undefined"/>
    <string name="security_system_status">Security system</string>
    <string name="last_security_update">Last security sys update</string>

    <!--GCM stuff-->
    <string name="gcm_category_title">GCM settings</string>
    <string name="gcm_sender_id_summary">GCM sender identificator</string>
    <string name="gcm_sender_id_title">GCM sender ID</string>
    <string name="gcm_sender_url_title">GCM URL</string>
    <string name="gcm_sender_url_summary">Google cloud messaging server</string>
    <string name="gcm_error">GCM Error</string>
    <string name="gcm_deleted">GCM Deleted</string>
    <string name="gcm_message">GCM Message</string>
    <string name="gcm_recoverable_error">GCM Recoverable error</string>
    <string name="gcm_registered">GCM registered</string>
    <string name="gcm_unregistered">GCM unregistered</string>
    <string name="server_unregister_error">GCM Unregister error</string>
    <string name="server_unregistered">GCM Unregistered</string>
    <string name="server_register_error">GCM Register error</string>
    <string name="server_registering">GCM Server registering</string>
    <string name="server_registered">GCM Server registered</string>
    <string name="deviceGcmID">GCM ID</string>

    <!--Notifications-->
    <string name="device_notifications">Notifications</string>
    <string name="silentTrafficNotifications">Silent traffic notifications</string>
    <string name="silentTrafficNotifications_summary">Don\u0027t play sound when receiving traffic notifications from application.</string>


    <string name="setNow">Now</string>
    <string name="ttsNotifications_summary">Text To Speech notifications received from GCM</string>
    <string name="ttsNotifications">Mute TTS Engine</string>
    <string name="room_night_temperature">Night temp.</string>
    <string name="room_comfort_temperature">Comfort temp.</string>
    <string name="roomname_southchildroom">Juž.detská</string>
    <string name="roomname_northchildroom">Sev.detská</string>
    <string name="roomname_kidzPortable_short">Kids</string>
    <string name="roomname_northchldroom_short">N.Childroom</string>
    <string name="roomname_reserved">N/A</string>
    <string name="unknown_humidity">--.-- %</string>
    <string name="roomname_southchldroom_short">S.Childroom</string>
    <string name="roomname_bedroom2">Bedroom</string>

    <string name="ConnectionFailure">Connection failure</string>
    <string name="NoPeersFound">No Peers Found</string>
    <string name="application_info">Application information</string>
    <string name="roomname_diningroom">Jedalen</string>
    <string name="roomname_diningroomFloor">Jedalen podlaha</string>
    <string name="allowTrafficNotifications_summary">Traffic notifications based on local provider allowance/disallowance.</string>
    <string name="allowTrafficNotifications">Allow receiving traffic notifications</string>

    <string-array name="temperaturesInside">
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </string-array>
</resources>