<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:shrinkColumns="*"
                 android:stretchColumns="*">
            <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal" android:layout_column="0">
                <TextView android:id="@+id/textView_roomtemp_bedroom" android:text="@string/unknown_temperature" style="TemperatureMainScreen" android:layout_height="wrap_content" android:layout_width="fill_parent"/>
                <TextView android:id="@+id/textView_roomname_bedroom" android:text="@string/roomname_bedroom" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal" android:layout_column="1">
                <TextView android:id="@+id/textView_roomtemp_upperlobby" android:text="@string/unknown_temperature" style="TemperatureMainScreen" android:layout_height="wrap_content" android:layout_width="fill_parent"/>
                <TextView android:id="@+id/textView_roomname_upperlobby" android:text="@string/roomname_upperlobby" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
            </TableRow>

            <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal" android:layout_column="0">
                <TextView android:id="@+id/textView_roomtemp_workroom" android:text="@string/unknown_temperature" style="TemperatureMainScreen" android:layout_height="wrap_content" android:layout_width="fill_parent"/>
                <TextView android:id="@+id/textView_roomname_workroom" android:text="@string/roomname_workroom" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
            </TableRow>
            <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal" android:layout_column="1">
                <TextView android:id="@+id/textView_roomtemp_outside" android:text="@string/unknown_temperature" style="TemperatureMainScreen" android:layout_height="wrap_content" android:layout_width="fill_parent"/>
                <TextView android:id="@+id/textView_roomname_outside" android:text="@string/roomname_outside" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
            </TableRow>

    </TableLayout>
</RelativeLayout>