<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/widget_margin"
        android:background="@drawable/widget_background">

    <LinearLayout
            android:id="@+id/widget_layout_topElement"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:weightSum="5">

        <!--Bedroom-->
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:layout_weight="1">
            <TextView
                    android:id="@+id/widget_bedroom_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/unknown_temperature"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/roomname_bedroom"/>
        </LinearLayout>

        <!--upper lobby-->
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:layout_gravity="center_horizontal|center_vertical"
                      android:gravity="center_horizontal|center_vertical"
                      android:layout_weight="1">
            <TextView
                    android:id="@+id/widget_upperlobby_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/unknown_temperature"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/roomname_upperlobby_short"/>
        </LinearLayout>

        <!--work room-->
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:layout_gravity="center_horizontal|center_vertical"
                      android:gravity="center_horizontal|center_vertical"
                      android:layout_weight="1">
            <TextView
                    android:id="@+id/widget_workroom_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/unknown_temperature"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/roomname_workroom_short"/>
        </LinearLayout>

        <!--kitchen-->
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:layout_gravity="center_horizontal|center_vertical"
                      android:gravity="center_horizontal|center_vertical"
                      android:layout_weight="1">
            <TextView
                    android:id="@+id/widget_kitchen_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/unknown_temperature"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/roomname_kitchen_short"/>
        </LinearLayout>

        <!--entrance lobby-->
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:layout_gravity="center_horizontal|center_vertical"
                      android:gravity="center_horizontal|center_vertical"
                      android:layout_weight="1">
            <TextView
                    android:id="@+id/widget_entrancelobby_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/unknown_temperature"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/roomname_entrancelobby"/>
        </LinearLayout>

        <!--outside-->
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:layout_gravity="center_horizontal|center_vertical"
                      android:gravity="center_horizontal|center_vertical"
                      android:layout_weight="1">
            <TextView
                    android:id="@+id/widget_outside_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/unknown_temperature"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/roomname_outside"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="36dp"
                  android:orientation="horizontal"
                  android:layout_below="@id/widget_layout_topElement"
                  android:layout_weight="5">
        <ImageView
                android:id="@+id/widgetLeftIcon"
                android:src="@drawable/home_alarm_state_unknown"
                android:layout_width="26dp"
                android:layout_height="36dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"/>
        <TextView
                android:id="@+id/widget_traffic_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/unknown_value">
        </TextView>
    </LinearLayout>

</RelativeLayout>
